@@ -1,23 +1,9 @@
 #!/bin/bash
 . env.sh
-#variables passed to docker container from run.sh script
-#export TGRID_BUILD_NUMBER=${TGRID_BUILD_NUMBER='12700-5'}
-export TGRID_GS_PRODUCT_VERSION=${TGRID_GS_PRODUCT_VERSION='10.2.0'}
-#export TGRID_S3_PUBLISH_FOLDER=${TGRID_S3_PUBLISH_FOLDER=${TGRID_GS_PRODUCT_VERSION}-${TGRID_BUILD_NUMBER}-SNAPSHOT}
-export TGRID_MILESTONE=${TGRID_MILESTONE='ga'}
-export TGRID_SUITE_CUSTOM_EXCLUDE=${TGRID_SUITE_CUSTOM_EXCLUDE='com.gigaspaces.test.blobstore*'}
-export TGRID_SUITE_CUSTOM_INCLUDE=${TGRID_SUITE_CUSTOM_INCLUDE=''}
-export TGRID_SUITE_CUSTOM_JVMARGS=${TGRID_SUITE_CUSTOM_JVMARGS='-XX:+UseParallelGC -XX:+HeapDumpOnOutOfMemoryError -server -XX:+AggressiveOpts -showversion -XX:MaxPermSize=256m'}
-export TGRID_SUITE_CUSTOM_SYSPROPS=${TGRID_SUITE_CUSTOM_SYSPROPS='-Dcom.gs.enabled-backward-space-lifecycle-admin=true -Dcom.gs.engine.disableQuiesceMode=false'}
-export TGRID_QA_SUITE_VERSION=${TGRID_QA_SUITE_VERSION=${TGRID_GS_PRODUCT_VERSION} Sprint ${TGRID_MILESTONE}}
-export TGRID_TARGET_JVM=${TGRID_TARGET_JVM='7_Sun8'}
 
-GIT_BRANCH=${GIT_BRANCH='master'}
 #remove this comment when developing the docker file in order to build a new image of the docker container
 #./build.sh
-
 ./run.sh
-
 BUILD_STATUS=`cat ${SOURCES_DIR}/build_status/stat`
 if [ ${BUILD_STATUS} -eq 0 ]
 then
@@ -66,11 +52,12 @@ pushd ${LOCAL_BUILD_DIR}
 # copy resources that are used for newman submitter to a folder which is served in http web server
 rm -rf ${WEB_FOLDER}/pending_build/*
 cp -f testsuite-1.5.zip ${WEB_FOLDER}/pending_build
-cp -f metadata.txt ${WEB_FOLDER}/pending_build
 cp -f ${SOURCES_DIR}/newman-artifacts/newman-artifacts.zip ${WEB_FOLDER}/pending_build
 cp -f ${SOURCES_DIR}/metadata/metadata.txt ${WEB_FOLDER}/pending_build
 cp -f ${GS_ZIP_FILE_LOCAL} ${WEB_FOLDER}/pending_build
-cp -f ${SOURCES_DIR}/sgtest-jar/SGTest*.jar ${WEB_FOLDER}/pending_build
+cp -f ${SOURCES_DIR}/sgtest-metadata/sgtest-tests.json ${WEB_FOLDER}/pending_build
+cp -f ${SOURCES_DIR}/http-session-tests-metadata/*.json ${WEB_FOLDER}/pending_build
+cp -f ${SOURCES_DIR}/tgrid-tests-metadata/*.json ${WEB_FOLDER}/pending_build
 
 unzip testsuite-1.5.zip
 unzip ${GS_ZIP_FILE_LOCAL}
